--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
         </div>
         <!-- /.container -->
   </section>
+  <!---секция-->
 
   <footer class="footer">
     <div class="container">
