исправил шрифт в people

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
   <section class="people">
         <div class="container container_img">
           <div class="text_image">
-            <span class="title">Эти люди уже</span>
-            <strong class="subtitle">Заказали книгу</strong>
+            <span class="title_im">Эти люди уже</span>
+            <strong class="subtitle_im">Заказали книгу</strong>
           </div>
           <!-- /.about-text -->
           <div class="wrap wrap_img">
